@@ -1,3 +1,9 @@
+2010-04-29  Andreas Kupries  <andreask@activestate.com>
+
+	* library/platform/platform.tcl: Another stab at getting the /lib,
+	* library/platform/pkgIndex.tcl: /lib674 difference right for
+	linux. Package updated to version 1.0.7.
+
 2010-04-18  Donal K. Fellows  <dkf@users.sf.net>
 
 	* doc/unset.n: [Bug 2988940]: Fix typo.
